<resources>
    <string name="app_name">Notes</string>
    <string name="sem_notas">Nenhuma Nota</string>
    <string name="notas">Minhas Notas</string>
    <string name="titulo">Título</string>
    <string name="conteudo">Conteúdo</string>
    <string name="busca">"Lorem"</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="cancelar">Cancelar</string>
    <string name="deletar">Deletar</string>
    <string name="nenhum_resultado">Sua busca não retornou nenhum \nresultado!</string>
    <string name="confirmar_delecao">Deseja realmente deletar essa nota ? \nEssa ação não poderá ser desfeita!</string>
    <string name="info_delecao_sucesso">Nota Excluída!</string>
    <string name="info_delecao_falha">Erro ao excluir!</string>
    <string name="info_atualizacao_sucesso">Nota Atualizada!</string>
    <string name="info_atualizacao_falha">Erro ao atualizar!</string>
    <string name="info_insercao_sucesso">Nota Criada!</string>
    <string name="info_insercao_falha">Erro ao Criar!</string>
    <string name="info_campo_busca_vazio">Campo vazio!</string>
    <string name="info_campos_vazios">Não há nada para salvar!</string>
    <plurals name="resultados">
        <item quantity="one">Sua busca retornou 1 resultado:</item>
        <item quantity="other">Sua busca retornou %1$d resultados:</item>
    </plurals>
</resources>