<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:id="@+id/dialog"
    android:background="@drawable/background_dialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_titulo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/confirmar_delecao"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/dark_sienna"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        android:textColor="@color/dark_sienna"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0"
        app:strokeColor="@color/dark_sienna"
        app:strokeWidth="3dp"
        app:backgroundTint="@color/key_lime"
        app:cornerRadius="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_titulo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_excluir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deletar"
        android:textAllCaps="false"
        android:textColor="@color/key_lime"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0"
        app:cornerRadius="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cancelar" />

</androidx.constraintlayout.widget.ConstraintLayout>